<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ModifyBarcodeProfileTutorial</string>
    <string name="hello_world">Hello world!</string>
    <string name="code128_string">Code128</string>
    <string name="code39_string">Code39</string>
    <string name="EAN8_string">EAN8 </string>
    <string name="EAN13_string">EAN13 </string>
    <string name="UPCE_string">UPCA </string>
    <string name="UPCE0_string">UPCE0 </string>
    <string name="button_set_string">Update Settings </string>

</resources>